--- a/templates/base.html
+++ b/templates/base.html
@@ -12,12 +12,10 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="/">🎵 Genre Tagger</a>
+            <a class="navbar-brand" href="/">🎵 Music Library Manager</a>
             <div class="navbar-nav">
                 <a class="nav-link" href="/">Dashboard</a>
                 <a class="nav-link" href="/albums">Albums</a>
-                <a class="nav-link" href="/batch">Batch Processing</a>
-                <a class="nav-link" href="/quality">Quality Control</a>
             </div>
         </div>
     </nav>
