--- a/templates/index.html
+++ b/templates/index.html
@@ -170,8 +170,8 @@
     <div class="col-12">
         <div class="alert alert-info">
             <h4><i class="fas fa-info-circle"></i> No Batch Jobs Found</h4>
-            <p>No batch processing jobs have been run yet. Run the music genre tagger to see results here:</p>
-            <code>python3 music_genre_tagger.py /path/to/music batch --dry-run --limit 10</code>
+            <p>No batch processing jobs have been run yet. Use the web interface to start batch processing and see results here.</p>
+            <p>Click on the navigation menu to access the batch processing features.</p>
         </div>
     </div>
 </div>
